--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
+<head>
+<title>Ryan Bomalaski</title>
+</head>
 <body style="background-color:#333333;">
-<p style="text-align: center;"><span style="color: #ff9900;">Coming Soon</span></p>
+<h1 style="text-align: center;"><span style="color: #ff9900;">Coming Soon</span></h1>
 <p style="text-align: center;"><span style="color: #ff9900;">Ryan Bomalaski</span></p>
-  </body>
+</body>
