--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 </head>
 <body style="background-color:#333333;">
 <h1 style="text-align: center;"><span style="color: #ff9900;">Coming Soon</span></h1>
-<p style="text-align: center;"><span style="color: #ff9900;">Ryan Bomalaski</span></p> 
+<h1 style="text-align: center;"><span style="color: #ff9900;">But not like Soon-Soon</span></h1>
+<p style="text-align: center;"><span style="color: #ff9900;">I still have school...</span></p> 
 </body>
