--- a/cv.html
+++ b/cv.html
@@ -1,13 +1,13 @@
 <!Doctype html>
 <html>
     <head>
-        <title>Ryan Bomalaski - Home</title>
+        <title>Ryan Bomalaski - CV</title>
         <link href="https://fonts.googleapis.com/css?family=Montserrat|Source+Code+Pro" rel="stylesheet">
         <style>
             * {
                 background-color: #333333;
             }
-            h1 {
+            h1, h2 {
                 color: #ff9900;
                 font-family: 'Source Code Pro', monospace;
                 text-align: center;
@@ -22,7 +22,10 @@
     </head>
     <body>
         <h1>Ryan Bomalaski</h1>
-        <p> This is where I will put stuff about me or something.  IDK...</p>
+        <h2>Lims Consultant</h2>
+        <p> Description about LIMS Consultant</p>
+        <h2>Assistant Language Teacher</h2>
+        <p> Description about ALT position</p>
         
     </body>
     
