--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
     <head>
-        <title>Ryan Bomalaski - Home</title>
+        <title>Ryan Bomalaski - About</title>
         <link href="https://fonts.googleapis.com/css?family=Montserrat|Source+Code+Pro" rel="stylesheet">
         <style>
             * {
@@ -21,7 +21,7 @@
         
     </head>
     <body>
-        <h1>Ryan Bomalaski</h1>
+        <h1>About</h1>
         <p> This is where I will put stuff about me or something.  IDK...</p>
         
     </body>
