--- a/about.html
+++ b/about.html
@@ -23,6 +23,15 @@
     <body>
         <h1>About</h1>
         <p> This is where I will put stuff about me or something.  IDK...</p>
+        <p>
+            <ul>
+                <li><a href="cv.html">CV</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </p>
         
     </body>
     
