--- a/blog.html
+++ b/blog.html
@@ -24,6 +24,15 @@
         <h1>Entry Title</h1>
         <p> Info about entry</p>
         <p> Next Recent Previous</p>
+        <p>
+            <ul>
+                <li><a href="cv.html">CV</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </p>
         
     </body>
     
