--- a/cv.html
+++ b/cv.html
@@ -24,8 +24,18 @@
         <h1>Ryan Bomalaski</h1>
         <h2>Lims Consultant</h2>
         <p> Description about LIMS Consultant</p>
+        <hr/>
         <h2>Assistant Language Teacher</h2>
         <p> Description about ALT position</p>
+        <p>
+            <ul>
+                <li><a href="cv.html">CV</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </p>
         
     </body>
     
