--- a/projects.html
+++ b/projects.html
@@ -7,14 +7,15 @@
             * {
                 background-color: #333333;
             }
-            h1 {
+            h1,h2 {
                 color: #ff9900;
                 font-family: 'Source Code Pro', monospace;
+            }
+            h1 {
                 text-align: center;
             }
             p {
                 color: #ff9900;
-                text-align: center;
                 font-family: 'Montserrat', sans-serif;
             }
         </style>
@@ -22,7 +23,23 @@
     </head>
     <body>
         <h1>Project List</h1>
-        <p>Put list of projects here</p>
+        <h2>Boom World</h2>
+        <p>Quick description of Boom World goes here</p>
+        <hr/>
+        <h2>Leafy - The Digital Assistant Plant</h2>
+        <p>Quick Leafy Description goes here</p>
+        <hr/>
+        <h2>Faces from Spaces!</h2>
+        <p>Quick FFS Description goes here</p>
+        <p>
+            <ul>
+                <li><a href="cv.html">CV</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </p>
         
     </body>
     
