--- a/cv.html
+++ b/cv.html
@@ -7,14 +7,15 @@
             * {
                 background-color: #333333;
             }
-            h1, h2 {
+            h1, h2,h3 {
                 color: #ff9900;
                 font-family: 'Source Code Pro', monospace;
+            }
+            h1{
                 text-align: center;
             }
             p {
                 color: #ff9900;
-                text-align: center;
                 font-family: 'Montserrat', sans-serif;
             }
         </style>
@@ -22,11 +23,16 @@
     </head>
     <body>
         <h1>Ryan Bomalaski</h1>
-        <h2>Lims Consultant</h2>
-        <p> Description about LIMS Consultant</p>
-        <hr/>
-        <h2>Assistant Language Teacher</h2>
-        <p> Description about ALT position</p>
+        <h2><b>Professional Experience</b></h2>
+        <h3>Lims Consultant</h3>
+        <p>About job</p>
+        <h3>Assistant Language Teacher</h3>
+        <p>About job</p>
+        <h2><b>Academic History</b></h2>
+        <h3>Master of Science - Software Engineering</h3>
+        <p>About studies</p>
+        <h3>Bachelor of Arts - Biochemistry</h3>
+        <p>About studies</p>
             <ul>
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="projects.html">Projects</a></li>
