--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             I am currently in the process of updating my projects page.  Head on over there to take a look at some of the interesting stuff I have built.
                         </p>
                         <h3 class="rb_brown_box">
-                            Workd in Progress
+                            Work in Progress
                         </h3>
                         <p class="rb_brown_box">
                             This website is very much a work in progress.  I am using it to help teach myself html and css.  I will (hopefully) move onto javascript as well.
