--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
                             This is my most active project, as it has actually really started to save me time.  I am currently the dungeon master for 2 groups of 5 people, and preparing materials for 10 players can be difficult.  While I still like to take the personal route and make things super fun for my players, having a level of automation for when things get away from me has helped.  DND Tool Set isn't really one program, it's more of a collection of python scripts that I use as needed.
                         </p>
                         <p class="rb_brown_box">
-                            The tool set currently includes an encounter generator and a dungeon generator (without hallways).  I have been fine tuning a bad guy maker, to make interesting villains.  That will be uploaded to github shortly.  I also want to make a loot generator.  I am saving the loot generator for last, because it will probably be the easiest to implement.<br/>
+                            The tool set currently includes an encounter generator and a dungeon generator (without hallways).  I have been fine tuning a bad guy maker, to make interesting villains.  That will be uploaded to github shortly.  I also want to make a loot generator.  I am saving the loot generator for last, because it will probably be the easiest to implement.
+                        </p>
+                        <p class="rb_brown_box">
+                        Currently this project is being adapted over to Java as a tool suite.  From there I will be creating and releasing an Android app.  The status of the current java implementation can be seen in the github linked below.
+                        
+                            <br/>
                             <br/>
                             <a href="https://github.com/ryanbomo/dnd_tools">Github</a>
                         </p>
@@ -76,7 +81,8 @@
                             SmartWord is a project for my Data Structures and Algorithms class.  The goal of this project was to design a text prediction program using corpora.  The provided corpora were tweets by then presidential candidates Donald Trump and Hilary Clinton.  The program was meant to take the corpora and use it to recognize patterns, then take other tweets letter by letter and try to guess the incoming word.  When the incoming word was guessed, the input skips to the next full word.
                         </p>
                         <p class="rb_brown_box">
-                            This project has been added to my curated portfolio because it helps demonstrate my earlier work with Java, my competency with programming data structures and my penchant for project organization.  I am quite proud of the prediction accuracy I achieved - around 48% with the tested tweets.<br/>
+                            This project has been added to my curated portfolio because it helps demonstrate my earlier work with Java, my competency with programming data structures and my penchant for project organization.  I am quite proud of the prediction accuracy I achieved - around 48% with the tested tweets.
+                            <br/>
                             <br/>
                             <a href="https://github.com/ryanbomo/SmartWordCSE2010">Github</a>
                         </p>
@@ -100,7 +106,9 @@
                             Currently only assignment 1 for the overall project is finished.  Each of the above functions is separated innto its own small program.  The solutions are also fairly hacky, as handling matrices is difficult with C.
                         </p>
                         <p class="rb_brown_box">
-                            I have included this in my portfolio to have a currently on-going school project available.  It shows that I track requirements and documentation as I go, allowing for easy report making.  I also want to show the documents that I have created for helping other students in the class.<br/>                           <br/>
+                            I have included this in my portfolio to have a currently on-going school project available.  It shows that I track requirements and documentation as I go, allowing for easy report making.  I also want to show the documents that I have created for helping other students in the class.
+                            <br/>
+                            <br/>
                             <a href="https://github.com/ryanbomo/swe5415">Github</a>
                         </p>
                     </div>
@@ -129,8 +137,8 @@
                         </p>
                         <p>
                             The goal of this project is to create a tool capable of autmatically mapping from AADL to Python. First, AADL was used to design a collision avoidance system. This was then used to create the program in Python. Manual mapping was done between the two, in order to show how paradigms in each lined up. Finally, this mapping was used to create a Java tool for automating from AADL to Python
-                        </p>
-                        <p class="rb_brown_box">
+                        <br/>  
+                        <br/>
                             <a href="https://github.com/ryanbomo/5002_collision_avoidance">Github</a>
                         </p>
                     </div>
@@ -155,8 +163,8 @@
                         </p>
                         <p class="rb_brown_box">
                             In order for the database to better represent what a hospital or insurance network might utilize, a random record generator was developed in the Python language. As this was just a tool to fill in data for our database, it did not need to be secure nor did it need to be extremely quick. Python was chosen because it was seen to be good enough.
-                        </p>
-                        <p class="rb_brown_box">
+                            <br/>
+                            <br/>
                             <a href="https://github.com/ryanbomo/5260-Project">Github</a>
                         </p>
                     </div>
